@@ -192,6 +192,9 @@ CB_CONFIG_SUPPORT (cb_same_as_clause, "same-as-clause",
 CB_CONFIG_SUPPORT (cb_synchronized_clause, "synchronized-clause",
 	_("SYNCHRONIZED clause"))
 
+CB_CONFIG_SUPPORT (cb_sync_left_right, "sync-left-right",
+	_("LEFT/RIGHT phrases in SYNCHRONIZED clause"))
+
 CB_CONFIG_SUPPORT (cb_goto_statement_without_name, "goto-statement-without-name",
 	_("GOTO statement without name"))
 
