@@ -1221,8 +1221,8 @@ validate_pic (struct cb_field *f)
 				if (p->usage != CB_USAGE_DISPLAY
 				 && f->usage != p->usage) {
 					cb_error_x (x, _("%s USAGE %s incompatible with %s USAGE %s"),
-								p->flag_filler?"FILLER":p->name, cb_get_usage_string (p->usage),
-								f->flag_filler?"FILLER":f->name, cb_get_usage_string (f->usage));
+							p->flag_filler?"FILLER":p->name, cb_get_usage_string (p->usage),
+							f->flag_filler?"FILLER":f->name, cb_get_usage_string (f->usage));
 					break;
 				}
 			}
@@ -1236,30 +1236,48 @@ validate_pic (struct cb_field *f)
 				}
 			}
 		}
-		if ( !f->flag_synchronized
-		 && !f->flag_ignore_sync
-		 && ( f->usage == CB_USAGE_BINARY
-		    || f->usage == CB_USAGE_FLOAT
-		    || f->usage == CB_USAGE_DOUBLE
-		    || f->usage == CB_USAGE_UNSIGNED_SHORT
-		    || f->usage == CB_USAGE_SIGNED_SHORT
-		    || f->usage == CB_USAGE_UNSIGNED_INT
-		    || f->usage == CB_USAGE_SIGNED_INT
-		    || f->usage == CB_USAGE_UNSIGNED_LONG
-		    || f->usage == CB_USAGE_SIGNED_LONG
-		    || f->usage == CB_USAGE_COMP_5
-		    || f->usage == CB_USAGE_COMP_6
-		    || f->usage == CB_USAGE_FP_DEC64
-		    || f->usage == CB_USAGE_FP_DEC128
-		    || f->usage == CB_USAGE_FP_BIN32
-		    || f->usage == CB_USAGE_FP_BIN64
-		    || f->usage == CB_USAGE_FP_BIN128
-		    || f->usage == CB_USAGE_LONG_DOUBLE)) {
+		/* TODO: handle this "per dialect", some disallow this (per ANSI85) or ignore it */
+		if (!f->flag_synchronized
+		 && f->parent
+		 && (f->usage == CB_USAGE_BINARY
+		  || f->usage == CB_USAGE_FLOAT
+		  || f->usage == CB_USAGE_DOUBLE
+		  || f->usage == CB_USAGE_UNSIGNED_SHORT
+		  || f->usage == CB_USAGE_SIGNED_SHORT
+		  || f->usage == CB_USAGE_UNSIGNED_INT
+		  || f->usage == CB_USAGE_SIGNED_INT
+		  || f->usage == CB_USAGE_UNSIGNED_LONG
+		  || f->usage == CB_USAGE_SIGNED_LONG
+		  || f->usage == CB_USAGE_COMP_5
+		  || f->usage == CB_USAGE_COMP_6
+		  || f->usage == CB_USAGE_FP_DEC64
+		  || f->usage == CB_USAGE_FP_DEC128
+		  || f->usage == CB_USAGE_FP_BIN32
+		  || f->usage == CB_USAGE_FP_BIN64
+		  || f->usage == CB_USAGE_FP_BIN128
+		  || f->usage == CB_USAGE_LONG_DOUBLE)) {
+			struct cb_field *p;
 			for (p = f->parent; p; p = p->parent) {
 				if (p->flag_synchronized) {
-						f->flag_synchronized = 1;
+					f->flag_synchronized = 1;
 					break;
 				}
+			}
+		}
+		/* ignore sync for binary items */
+		if (f->flag_synchronized
+		 && cb_binary_sync_clause == CB_IGNORE) {
+			switch (f->usage) {
+			case CB_USAGE_SIGNED_SHORT:
+			case CB_USAGE_UNSIGNED_SHORT:
+			case CB_USAGE_SIGNED_INT:
+			case CB_USAGE_UNSIGNED_INT:
+			case CB_USAGE_SIGNED_LONG:
+			case CB_USAGE_UNSIGNED_LONG:
+				f->flag_synchronized = 0;
+				break;
+			default:
+				break;
 			}
 		}
 		if (f->pic
@@ -2125,9 +2143,9 @@ setup_parameters (struct cb_field *f)
 
 	case CB_USAGE_COMP_5:
 	case CB_USAGE_COMP_N:
-		if(f->pic 
-		&& f->pic->orig
-		&& f->pic->orig[0] == 'X') {
+		if (f->pic 
+		 && f->pic->orig
+		 && f->pic->orig[0] == 'X') {
 			f->usage = CB_USAGE_COMP_X;
 		}
 		f->flag_real_binary = 1;
@@ -2373,7 +2391,7 @@ set_report_field_offset (struct cb_field *f)
 			for (c = pp->children; c; c = c->sister) {	/* Find previous field */
 				if (c->sister == f) {
 					if (c->occurs_max > 1) {
-					 	f->offset = c->offset + c->size * c->occurs_max + f->report_column;
+						f->offset = c->offset + c->size * c->occurs_max + f->report_column;
 					}
 					else {
 						f->offset = c->offset + c->size + f->report_column;
@@ -2431,8 +2449,8 @@ compute_size (struct cb_field *f)
 			 && !(c->report_flag & COB_REPORT_LINE_PLUS)
 			 && c->report_line == f->report_line) {
 				if (warningopt) {
-					cb_warning_x (COBC_WARN_FILLER,
-						      CB_TREE(f), _("Duplicate LINE %d ignored"),f->report_line);
+					cb_warning_x (COBC_WARN_FILLER, CB_TREE (f),
+						      _("duplicate LINE %d ignored"), f->report_line);
 				}
 				f->report_line = 0;
 				f->report_flag &= ~COB_REPORT_LINE;
@@ -2448,9 +2466,10 @@ compute_size (struct cb_field *f)
 
 		/* Groups */
 		if (f->flag_synchronized 
-		 && !f->flag_ignore_sync
 		 && warningopt) {
-			cb_warning_x (COBC_WARN_FILLER, CB_TREE (f), _("ignoring SYNCHRONIZED for group item '%s'"),
+			/* TODO: handle this "per dialect", some disallow this (per ANSI85) or ignore it */
+			cb_warning_x (COBC_WARN_FILLER, CB_TREE (f),
+				    _("ignoring SYNCHRONIZED for group item '%s'"),
 				    cb_name (CB_TREE (f)));
 		}
 unbounded_again:
@@ -2499,8 +2518,7 @@ unbounded_again:
 				}
 
 				/* Word alignment */
-				if (c->flag_synchronized
-				 && !c->flag_ignore_sync) {
+				if (c->flag_synchronized) {
 					align_size = 1;
 					switch (c->usage) {
 					case CB_USAGE_BINARY:
