@@ -210,8 +210,9 @@ section-segments:			ignore # not verified yet
 stop-literal-statement:			obsolete # not verified yet
 stop-identifier-statement:		unconformable
 same-as-clause:				unconformable
-synchronized-clause:			ok # not verified yet
-top-level-occurs-clause:		ok # not verified yet
+synchronized-clause:			ok
+sync-left-right:			skip
+top-level-occurs-clause:		ok
 value-of-clause:			obsolete # not verified yet
 numeric-boolean:			unconformable
 hexadecimal-boolean:			unconformable
