@@ -208,6 +208,7 @@ stop-literal-statement:			obsolete
 stop-identifier-statement:		unconformable
 same-as-clause:				unconformable
 synchronized-clause:			ok
+sync-left-right:			skip
 top-level-occurs-clause:		unconformable
 value-of-clause:			obsolete
 numeric-boolean:			unconformable
