@@ -207,6 +207,7 @@ stop-literal-statement:			unconformable
 stop-identifier-statement:		unconformable
 same-as-clause:				ok
 synchronized-clause:			ok
+sync-left-right:			ok
 top-level-occurs-clause:		skip
 value-of-clause:			unconformable
 occurs-max-length-without-subscript:	no 
