@@ -205,7 +205,8 @@ section-segments:			obsolete
 stop-literal-statement:			obsolete
 stop-identifier-statement:		unconformable
 same-as-clause:				unconformable
-synchronized-clause:			skip
+synchronized-clause:			ok
+sync-left-right:			ok
 top-level-occurs-clause:		skip
 value-of-clause:			obsolete
 numeric-boolean:			unconformable
