@@ -217,6 +217,7 @@ stop-literal-statement:			obsolete
 stop-identifier-statement:		obsolete
 same-as-clause:				ok
 synchronized-clause:			ok
+sync-left-right:			ok
 top-level-occurs-clause:		ok
 value-of-clause:			obsolete
 numeric-boolean:			ok
