@@ -89,6 +89,7 @@ stop-literal-statement:			+obsolete
 stop-identifier-statement:		ok
 same-as-clause:				ok
 synchronized-clause:			ok
+sync-left-right:			+ignore # better use "skip" here?
 top-level-occurs-clause:		ok
 value-of-clause:			+obsolete
 numeric-boolean:			ok
