@@ -209,6 +209,7 @@ stop-literal-statement:			obsolete
 stop-identifier-statement:		unconformable
 same-as-clause:				unconformable
 synchronized-clause:			ignore	# only active with IBMCOMP=OK (active with dialects IBM + RM)
+sync-left-right:			ok	# actually working with IBMCOMP / IBM dialect
 top-level-occurs-clause:		ok
 value-of-clause:			obsolete
 numeric-boolean:			ok			# this can be changed by the BINLINT directive (default is NUMERIC=OK)
