@@ -32,4 +32,4 @@ include:		"mf.words"
 # -fill upon request-
 
 include "lax.conf-inc"
-synchronized-clause:                     ignore  # only active with IBMCOMP=OK
+synchronized-clause:			ignore	# only active with IBMCOMP=OK (active with dialects IBM + RM)
