@@ -206,6 +206,7 @@ stop-literal-statement:			obsolete
 stop-identifier-statement:		unconformable
 same-as-clause:				unconformable
 synchronized-clause:			ok
+sync-left-right:			skip
 top-level-occurs-clause:		skip
 value-of-clause:			obsolete
 numeric-boolean:			unconformable
