@@ -210,7 +210,8 @@ section-segments:			unconformable
 stop-literal-statement:			ok
 stop-identifier-statement:		unconformable
 same-as-clause:				unconformable
-synchronized-clause:			ok # TO-DO: Add warning that LEFT/RIGHT of SYNC are ignored
+synchronized-clause:			ok
+sync-left-right:			ignore # better use "skip" here?
 top-level-occurs-clause:		unconformable
 value-of-clause:			ignore
 numeric-boolean:			unconformable
