@@ -213,6 +213,7 @@ stop-literal-statement:			obsolete
 stop-identifier-statement:		ok
 same-as-clause:				ok
 synchronized-clause:			ok
+sync-left-right:			ok
 top-level-occurs-clause:		unconformable
 value-of-clause:			obsolete
 numeric-boolean:			unconformable
