@@ -215,6 +215,7 @@ stop-literal-statement:			warning		# should not be used ...
 stop-identifier-statement:		unconformable
 same-as-clause:				unconformable
 synchronized-clause:			warning		# should not be used ... will prevent portability
+sync-left-right:			ok
 top-level-occurs-clause:		skip
 value-of-clause:			warning		# should not be used ...
 numeric-boolean:			unconformable
