@@ -1,4 +1,14 @@
 
+2020-01-12  Simon Sobisch <simonsobisch@gnu.org>
+
+	* parser.y, config.def: bug #513 (partial) added dialect option
+	  cb_sync_left_right and if it isn't ignored warn again about it being
+	  not implemented
+	* parser.y, tree.h: added flag_sync_left, flag_sync_right
+	  (currently not taken care of in codegen!)
+	* parser.y, field.c, tree.h: removed flag_ignore_sync, instead handle
+	  cb_binary_sync_clause == CB_IGNORE in (validate_pic)
+
 2020-01-11  Simon Sobisch <simonsobisch@gnu.org>
 
 	* codegen.c (output_module_init): split module initialization into
